# locus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  start.bat
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-infrastructure-terminal-core/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-08-PLAN.md  01-08-SUMMARY.md  01-09-PLAN.md  01-09-SUMMARY.md  01-10-PLAN.md  01-10-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-UAT.md  01-UI-SPEC.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-integrated-test-mode.md  SEED-002-session-migration.md
agent/: build.sh  pyproject.toml  requirements.txt
agent/locus_agent/: __main__.py  app.py  auth.py  cli.py  config.py
agent/locus_agent/api/: claude.py  exec.py  files.py  git.py  health.py  terminal.py  tmux.py
agent/locus_agent/terminal/: session_pool.py  unix.py  windows.py
agent/locus_agent/ws/: logs.py  terminal.py
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: test-terminal.html
frontend/src/: App.tsx  main.css  main.tsx  vite-env.d.ts
(+284 files in other folders)
